--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -15,7 +15,6 @@ set_real_ip_from 2001:41d0:601:1100::6f85;
 set_real_ip_from 2001:41d0:601:1100::71bb;
 set_real_ip_from 2001:41d0:700:10a2::;
 set_real_ip_from 2001:41d0:701:1000::5196;
-set_real_ip_from 2001:41d0:720:e300:25::;
 set_real_ip_from 2001:41d0:a:5c0::1;
 set_real_ip_from 2001:41d0:a:fe22::1;
 set_real_ip_from 2001:470:1:908::9001;
@@ -141,6 +140,7 @@ set_real_ip_from 2602:f915:f:3b43::1;
 set_real_ip_from 2602:fa59:5:915::1;
 set_real_ip_from 2602:fa86::be24:11ff:fe70:fc41;
 set_real_ip_from 2602:fa8a:3:a::a;
+set_real_ip_from 2602:fb54:1400::1d;
 set_real_ip_from 2602:fc24:10:bb36::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:18:f38f::1;
@@ -712,9 +712,6 @@ set_real_ip_from 2a12:a800:1:1:2:58:56:93;
 set_real_ip_from 2a12:a800:1:1:45:154:98:33;
 set_real_ip_from 2a12:a800:2:1:185:241:208:115;
 set_real_ip_from 2a12:a800:2:1:185:241:208:185;
-set_real_ip_from 2a12:a800:2:1:185:241:208:202;
-set_real_ip_from 2a12:a800:2:1:185:241:208:204;
-set_real_ip_from 2a12:a800:2:1:185:241:208:206;
 set_real_ip_from 2a12:a800:2:1:185:241:208:71;
 set_real_ip_from 2a12:a800:2:1:185:241:208:81;
 set_real_ip_from 2a12:a800:2:1:185:241:208:82;
