--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -12,7 +12,6 @@ allow 103.20.241.102;
 allow 103.251.167.10;
 allow 103.253.24.18;
 allow 103.28.52.93;
-allow 103.80.87.58;
 allow 103.91.65.44;
 allow 104.167.241.4;
 allow 104.167.242.117;
@@ -79,6 +78,7 @@ allow 107.189.8.226;
 allow 107.189.8.56;
 allow 107.189.8.65;
 allow 107.189.8.70;
+allow 108.181.69.137;
 allow 108.181.69.243;
 allow 108.59.12.41;
 allow 108.61.189.136;
@@ -130,6 +130,8 @@ allow 139.99.8.57;
 allow 141.98.11.62;
 allow 143.20.64.235;
 allow 144.126.133.74;
+allow 144.172.73.31;
+allow 144.31.188.82;
 allow 146.59.126.232;
 allow 146.59.231.4;
 allow 148.113.152.91;
@@ -143,7 +145,6 @@ allow 152.53.184.161;
 allow 152.53.210.165;
 allow 152.53.48.80;
 allow 152.53.53.243;
-allow 154.16.116.61;
 allow 154.26.159.157;
 allow 154.53.58.161;
 allow 160.119.249.240;
@@ -643,6 +644,7 @@ allow 2001:41d0:601:1100::6f85;
 allow 2001:41d0:601:1100::71bb;
 allow 2001:41d0:700:10a2::;
 allow 2001:41d0:701:1000::5196;
+allow 2001:41d0:720:e300:25::;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
@@ -1437,7 +1439,6 @@ allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:6a41:c13:1337::107;
 allow 2a0c:9a40:8860:51::aa11;
 allow 2a0c:e300:b:b::b;
-allow 2a0d:6c2:17:49c::;
 allow 2a0d:6c2:6:615::;
 allow 2a0d:bbc7::f816:3eff:fe0b:181b;
 allow 2a0d:bbc7::f816:3eff:fe0b:58d3;
@@ -1470,7 +1471,6 @@ allow 2a0e:4005:1002:ffff:185:40:4:29;
 allow 2a0e:4005:1002:ffff:185:40:4:38;
 allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
-allow 2a0e:97c0:3e3:1bb::3;
 allow 2a0e:97c0:3e3:460:1337:b00b:1337:1;
 allow 2a0e:97c0:3e3:460:1337:b01b:1337:2;
 allow 2a0e:97c0:3e3:460:1337:b02b:1337:3;
@@ -1497,6 +1497,7 @@ allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:5c50::1;
+allow 2a0f:85c1:8d2:16d1::1;
 allow 2a0f:cdc6:500:11e3::2;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -1598,6 +1599,7 @@ allow 31.133.0.210;
 allow 31.133.0.235;
 allow 31.184.236.104;
 allow 31.220.75.237;
+allow 31.40.204.186;
 allow 31.40.204.206;
 allow 31.44.238.25;
 allow 35.0.127.52;
@@ -1608,7 +1610,6 @@ allow 37.114.50.27;
 allow 37.114.63.5;
 allow 37.187.5.192;
 allow 37.221.208.71;
-allow 37.221.93.88;
 allow 37.228.129.128;
 allow 37.228.129.168;
 allow 37.228.129.189;
@@ -1714,6 +1715,7 @@ allow 45.84.107.55;
 allow 45.84.107.74;
 allow 45.84.107.76;
 allow 45.84.107.97;
+allow 45.86.153.106;
 allow 45.88.186.89;
 allow 45.88.186.92;
 allow 45.91.250.107;
@@ -1831,6 +1833,7 @@ allow 81.181.104.22;
 allow 82.117.255.113;
 allow 82.118.248.205;
 allow 82.153.138.125;
+allow 82.153.138.184;
 allow 82.153.138.241;
 allow 82.197.182.161;
 allow 82.221.128.191;
@@ -1858,7 +1861,6 @@ allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.222.33;
 allow 87.120.254.132;
-allow 87.121.84.8;
 allow 88.151.192.2;
 allow 88.80.20.86;
 allow 88.80.26.2;
