--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -15,6 +15,7 @@ deny 2001:41d0:601:1100::6f85;
 deny 2001:41d0:601:1100::71bb;
 deny 2001:41d0:700:10a2::;
 deny 2001:41d0:701:1000::5196;
+deny 2001:41d0:720:e300:25::;
 deny 2001:41d0:a:5c0::1;
 deny 2001:41d0:a:fe22::1;
 deny 2001:470:1:908::9001;
@@ -611,7 +612,6 @@ deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:6a41:c13:1337::107;
 deny 2a0c:9a40:8860:51::aa11;
 deny 2a0c:e300:b:b::b;
-deny 2a0d:6c2:17:49c::;
 deny 2a0d:6c2:6:615::;
 deny 2a0d:bbc7::f816:3eff:fe0b:181b;
 deny 2a0d:bbc7::f816:3eff:fe0b:58d3;
@@ -644,7 +644,6 @@ deny 2a0e:4005:1002:ffff:185:40:4:29;
 deny 2a0e:4005:1002:ffff:185:40:4:38;
 deny 2a0e:4005:1002:ffff:185:40:4:64;
 deny 2a0e:4005:1002:ffff:185:40:4:92;
-deny 2a0e:97c0:3e3:1bb::3;
 deny 2a0e:97c0:3e3:460:1337:b00b:1337:1;
 deny 2a0e:97c0:3e3:460:1337:b01b:1337:2;
 deny 2a0e:97c0:3e3:460:1337:b02b:1337:3;
@@ -671,6 +670,7 @@ deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:30::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:85c1:356:5c50::1;
+deny 2a0f:85c1:8d2:16d1::1;
 deny 2a0f:cdc6:500:11e3::2;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
