--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -159,7 +159,6 @@ allow 163.172.45.102;
 allow 164.132.172.209;
 allow 165.73.242.163;
 allow 166.70.207.2;
-allow 167.17.40.92;
 allow 171.25.193.131;
 allow 171.25.193.132;
 allow 171.25.193.20;
@@ -224,7 +223,6 @@ allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
 allow 178.30.234.82;
-allow 179.35.7.224;
 allow 179.43.128.16;
 allow 179.43.134.19;
 allow 179.43.159.194;
@@ -740,7 +738,6 @@ allow 202.182.99.129;
 allow 202.61.253.243;
 allow 203.55.81.1;
 allow 203.55.81.2;
-allow 204.137.14.104;
 allow 204.137.14.105;
 allow 204.137.14.106;
 allow 204.137.14.92;
@@ -886,6 +883,7 @@ allow 23.129.64.225;
 allow 23.129.64.99;
 allow 23.137.105.248;
 allow 23.137.248.100;
+allow 23.137.253.109;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
@@ -967,6 +965,7 @@ allow 2602:fb54:1400::1d;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -1229,6 +1228,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1745,6 +1745,7 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
