--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -159,7 +159,6 @@ set_real_ip_from 163.172.45.102;
 set_real_ip_from 164.132.172.209;
 set_real_ip_from 165.73.242.163;
 set_real_ip_from 166.70.207.2;
-set_real_ip_from 167.17.40.92;
 set_real_ip_from 171.25.193.131;
 set_real_ip_from 171.25.193.132;
 set_real_ip_from 171.25.193.20;
@@ -224,7 +223,6 @@ set_real_ip_from 178.218.144.64;
 set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
 set_real_ip_from 178.30.234.82;
-set_real_ip_from 179.35.7.224;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.134.19;
 set_real_ip_from 179.43.159.194;
@@ -740,7 +738,6 @@ set_real_ip_from 202.182.99.129;
 set_real_ip_from 202.61.253.243;
 set_real_ip_from 203.55.81.1;
 set_real_ip_from 203.55.81.2;
-set_real_ip_from 204.137.14.104;
 set_real_ip_from 204.137.14.105;
 set_real_ip_from 204.137.14.106;
 set_real_ip_from 204.137.14.92;
@@ -886,6 +883,7 @@ set_real_ip_from 23.129.64.225;
 set_real_ip_from 23.129.64.99;
 set_real_ip_from 23.137.105.248;
 set_real_ip_from 23.137.248.100;
+set_real_ip_from 23.137.253.109;
 set_real_ip_from 23.137.253.254;
 set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.137.254.244;
@@ -967,6 +965,7 @@ set_real_ip_from 2602:fb54:1400::1d;
 set_real_ip_from 2602:fc24:10:bb36::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:18:f38f::1;
+set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fc24:19:eb06::dead;
 set_real_ip_from 2602:fccf:100:3::14;
@@ -1229,6 +1228,7 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1745,6 +1745,7 @@ set_real_ip_from 51.81.222.62;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
