--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -79,7 +79,6 @@ allow 107.189.8.56;
 allow 107.189.8.65;
 allow 107.189.8.70;
 allow 108.181.69.137;
-allow 108.181.69.243;
 allow 108.61.189.136;
 allow 109.169.33.163;
 allow 109.237.27.11;
@@ -561,7 +560,6 @@ allow 193.189.100.203;
 allow 193.189.100.204;
 allow 193.189.100.205;
 allow 193.189.100.206;
-allow 193.237.155.109;
 allow 193.237.221.228;
 allow 193.239.232.102;
 allow 193.239.232.235;
@@ -582,6 +580,7 @@ allow 194.26.192.77;
 allow 194.42.196.42;
 allow 194.53.137.156;
 allow 194.55.167.14;
+allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.246.231.197;
@@ -738,6 +737,7 @@ allow 202.182.99.129;
 allow 202.61.253.243;
 allow 203.55.81.1;
 allow 203.55.81.2;
+allow 204.137.14.104;
 allow 204.137.14.105;
 allow 204.137.14.106;
 allow 204.137.14.92;
@@ -1492,6 +1492,7 @@ allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:5c50::1;
+allow 2a0f:85c1:356:62ed::1;
 allow 2a0f:85c1:8d2:16d1::1;
 allow 2a0f:cdc6:500:11e3::2;
 allow 2a0f:df00:0:255::194;
@@ -1510,6 +1511,7 @@ allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
+allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:114;
 allow 2a12:a800:11:1:124:198:131:191;
@@ -1584,6 +1586,7 @@ allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
 allow 2a14:1ec7:1000:a633::1;
 allow 2a14:7583:f607::;
+allow 2a14:c380:280:77::a;
 allow 2a14:c380:50:20::a;
 allow 2a14:c380:50:62::a;
 allow 2c0f:6c0:0:11::5e3d;
@@ -1627,7 +1630,6 @@ allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
 allow 38.97.116.245;
-allow 43.160.194.14;
 allow 44.30.4.69;
 allow 45.11.59.28;
 allow 45.12.3.80;
@@ -1794,6 +1796,7 @@ allow 64.190.76.4;
 allow 66.146.193.33;
 allow 66.220.242.222;
 allow 66.78.40.182;
+allow 66.78.40.210;
 allow 66.94.111.228;
 allow 67.219.109.141;
 allow 71.19.144.106;
@@ -1814,6 +1817,7 @@ allow 78.142.18.219;
 allow 78.159.131.103;
 allow 79.100.12.71;
 allow 80.241.60.207;
+allow 80.253.251.56;
 allow 80.67.167.81;
 allow 80.67.172.162;
 allow 80.82.78.14;
@@ -1856,6 +1860,7 @@ allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.222.33;
 allow 87.120.254.132;
+allow 87.121.79.55;
 allow 88.151.192.2;
 allow 88.80.20.86;
 allow 88.80.26.2;
