--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -79,7 +79,6 @@ set_real_ip_from 107.189.8.56;
 set_real_ip_from 107.189.8.65;
 set_real_ip_from 107.189.8.70;
 set_real_ip_from 108.181.69.137;
-set_real_ip_from 108.181.69.243;
 set_real_ip_from 108.61.189.136;
 set_real_ip_from 109.169.33.163;
 set_real_ip_from 109.237.27.11;
@@ -561,7 +560,6 @@ set_real_ip_from 193.189.100.203;
 set_real_ip_from 193.189.100.204;
 set_real_ip_from 193.189.100.205;
 set_real_ip_from 193.189.100.206;
-set_real_ip_from 193.237.155.109;
 set_real_ip_from 193.237.221.228;
 set_real_ip_from 193.239.232.102;
 set_real_ip_from 193.239.232.235;
@@ -582,6 +580,7 @@ set_real_ip_from 194.26.192.77;
 set_real_ip_from 194.42.196.42;
 set_real_ip_from 194.53.137.156;
 set_real_ip_from 194.55.167.14;
+set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
 set_real_ip_from 195.246.231.197;
@@ -738,6 +737,7 @@ set_real_ip_from 202.182.99.129;
 set_real_ip_from 202.61.253.243;
 set_real_ip_from 203.55.81.1;
 set_real_ip_from 203.55.81.2;
+set_real_ip_from 204.137.14.104;
 set_real_ip_from 204.137.14.105;
 set_real_ip_from 204.137.14.106;
 set_real_ip_from 204.137.14.92;
@@ -1492,6 +1492,7 @@ set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0e:fa00:0:30::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:85c1:356:5c50::1;
+set_real_ip_from 2a0f:85c1:356:62ed::1;
 set_real_ip_from 2a0f:85c1:8d2:16d1::1;
 set_real_ip_from 2a0f:cdc6:500:11e3::2;
 set_real_ip_from 2a0f:df00:0:255::194;
@@ -1510,6 +1511,7 @@ set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a10:c800:1:f7f8:0:1ce:1ce:babe;
+set_real_ip_from 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:a800:11:1:124:198:131:108;
 set_real_ip_from 2a12:a800:11:1:124:198:131:114;
 set_real_ip_from 2a12:a800:11:1:124:198:131:191;
@@ -1584,6 +1586,7 @@ set_real_ip_from 2a12:a800:9:1:45:88:186:89;
 set_real_ip_from 2a12:a800:9:1:45:88:186:92;
 set_real_ip_from 2a14:1ec7:1000:a633::1;
 set_real_ip_from 2a14:7583:f607::;
+set_real_ip_from 2a14:c380:280:77::a;
 set_real_ip_from 2a14:c380:50:20::a;
 set_real_ip_from 2a14:c380:50:62::a;
 set_real_ip_from 2c0f:6c0:0:11::5e3d;
@@ -1627,7 +1630,6 @@ set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
 set_real_ip_from 38.97.116.244;
 set_real_ip_from 38.97.116.245;
-set_real_ip_from 43.160.194.14;
 set_real_ip_from 44.30.4.69;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.12.3.80;
@@ -1794,6 +1796,7 @@ set_real_ip_from 64.190.76.4;
 set_real_ip_from 66.146.193.33;
 set_real_ip_from 66.220.242.222;
 set_real_ip_from 66.78.40.182;
+set_real_ip_from 66.78.40.210;
 set_real_ip_from 66.94.111.228;
 set_real_ip_from 67.219.109.141;
 set_real_ip_from 71.19.144.106;
@@ -1814,6 +1817,7 @@ set_real_ip_from 78.142.18.219;
 set_real_ip_from 78.159.131.103;
 set_real_ip_from 79.100.12.71;
 set_real_ip_from 80.241.60.207;
+set_real_ip_from 80.253.251.56;
 set_real_ip_from 80.67.167.81;
 set_real_ip_from 80.67.172.162;
 set_real_ip_from 80.82.78.14;
@@ -1856,6 +1860,7 @@ set_real_ip_from 87.118.122.30;
 set_real_ip_from 87.118.122.51;
 set_real_ip_from 87.120.222.33;
 set_real_ip_from 87.120.254.132;
+set_real_ip_from 87.121.79.55;
 set_real_ip_from 88.151.192.2;
 set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
