--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -583,6 +583,7 @@ set_real_ip_from 194.55.167.14;
 set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
+set_real_ip_from 195.177.94.59;
 set_real_ip_from 195.246.231.197;
 set_real_ip_from 195.47.238.176;
 set_real_ip_from 195.47.238.177;
@@ -757,6 +758,7 @@ set_real_ip_from 205.185.121.170;
 set_real_ip_from 205.185.121.177;
 set_real_ip_from 205.185.123.93;
 set_real_ip_from 205.185.124.176;
+set_real_ip_from 205.185.126.29;
 set_real_ip_from 206.166.251.193;
 set_real_ip_from 209.141.32.181;
 set_real_ip_from 209.141.32.198;
@@ -985,6 +987,7 @@ set_real_ip_from 2605:6400:20:12b7:4ea2:4422:e11e:adcd;
 set_real_ip_from 2605:6400:20:2417::69;
 set_real_ip_from 2605:6400:20:3ea:c2a3:1162:7224:e5df;
 set_real_ip_from 2605:6400:20:482:3920:1829:1839:1293;
+set_real_ip_from 2605:6400:20:6a2:e777:b638:a0ce:e2ac;
 set_real_ip_from 2605:6400:20:be7::1;
 set_real_ip_from 2605:6400:20:c26:5163:253e:1ef6:d887;
 set_real_ip_from 2605:6400:20:c26:5163:253e:1ef6:d896;
@@ -1586,7 +1589,6 @@ set_real_ip_from 2a12:a800:9:1:45:88:186:89;
 set_real_ip_from 2a12:a800:9:1:45:88:186:92;
 set_real_ip_from 2a14:1ec7:1000:a633::1;
 set_real_ip_from 2a14:7583:f607::;
-set_real_ip_from 2a14:c380:280:77::a;
 set_real_ip_from 2a14:c380:50:20::a;
 set_real_ip_from 2a14:c380:50:62::a;
 set_real_ip_from 2c0f:6c0:0:11::5e3d;
@@ -1834,6 +1836,7 @@ set_real_ip_from 82.118.248.205;
 set_real_ip_from 82.153.138.125;
 set_real_ip_from 82.153.138.184;
 set_real_ip_from 82.153.138.241;
+set_real_ip_from 82.153.138.7;
 set_real_ip_from 82.197.182.161;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
@@ -1860,7 +1863,6 @@ set_real_ip_from 87.118.122.30;
 set_real_ip_from 87.118.122.51;
 set_real_ip_from 87.120.222.33;
 set_real_ip_from 87.120.254.132;
-set_real_ip_from 87.121.79.55;
 set_real_ip_from 88.151.192.2;
 set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
